HelpMePlay | 1.0.8
	Dialog:
		- Added more stable masters.
		- Added more pet tamers.
	Fixes:
		- Talents should now suggest properly for Retribution Paladin.
		- Fixed multiple dialogs that previously worked.
		- Fixed an issue so quests are officially processed before dialogs.
		- Fixed an issue where items from merchants were being processed with an extended cost even when they didn't have one.